# wall-street-SIMS

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.claude/: settings.local.json
src/wallstreet/: __init__.py  __main__.py  config.py
src/wallstreet/agents/: __init__.py  base.py  fed_agent.py  headline_engine.py  risk_committee.py  rival_pm.py  short_seller.py
src/wallstreet/analytics/: expanded.py
src/wallstreet/career/: progression.py
src/wallstreet/cli/: __init__.py  app.py  display.py  prompts.py
src/wallstreet/event_engine/: __init__.py  catalog.py  generator.py
src/wallstreet/layers/: competition.py  narrative.py
src/wallstreet/market_engine/: __init__.py  correlation.py  regime.py  returns.py
src/wallstreet/models/: __init__.py  analytics.py  career.py  enums.py  events.py  game.py  market.py  narrative.py  portfolio.py  scoring.py
src/wallstreet/persistence/: __init__.py  repository.py  schema.py
src/wallstreet/scoring/: __init__.py  calculator.py
src/wallstreet/web/: __init__.py  server.py
src/wallstreet/web/static/: index.html
tests/: conftest.py  test_agents.py  test_analytics.py  test_career.py  test_event_engine.py  test_fed_agent.py  test_headline_engine.py  test_market_engine.py  test_models.py  test_persistence.py  test_rival_pm.py  test_scoring.py  test_short_seller.py
