[project]
name = "wallstreet-war-room"
version = "0.1.0"
description = "Wall Street War Room — a portfolio-management roguelike game"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "numpy>=1.24",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
wallstreet = "wallstreet.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wallstreet = ["web/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
